feat: bind internal api service and test attempt service